welcome.lessons.welcome.methods.picture.PictureMono2.scala.error
PictureMono2:1: error: method faireMotif overrides nothing
override def faireMotif() {
             ^